bug: favourites disappear without replacement on smaller displays

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,11 +1,11 @@
 @import "./colors.css";
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
 }
 
 q {
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-style: italic;
 }
 
