--- a/css/index-entries.css
+++ b/css/index-entries.css
@@ -16,6 +16,9 @@
 .entry__preview {
     grid-area: preview;
     order: 2;
+    object-fit: cover;
+    width: 150px;
+    height: 150px;
 }
 
 .entry__header {
@@ -32,7 +35,7 @@
 }
 
 @media (max-width: 600px) {
-    .entry {
+    .entry, #card-replacement__prio1, #card-replacement__prio2, #card-replacement__prio3 {
         display: flex;
         flex-direction: column;
     }
