--- a/css/layout.css
+++ b/css/layout.css
@@ -37,16 +37,29 @@ footer {
 figure {
     margin: 0;
 }
-
-@media (min-width: 1001px) and (max-width: 1500px) {
-    #card__prio3 {
+@media (min-width: 1501px) {
+    #card-replacement__prio3, #card-replacement__prio2, #card-replacement__prio1 {
         display: none;
     }
 }
 
-@media (max-width: 1000px) {
-    #card__prio3 {
+@media (min-width: 1001px) and (max-width: 1500px) {
+    #card__prio3, #card-replacement__prio2, #card-replacement__prio1 {
         display: none;
+    }
+
+    #card-replacement__prio3 {
+        display: grid;
+    }
+}
+
+@media (max-width: 1000px) {
+    #card__prio3, #card-replacement__prio2, #card-replacement__prio1 {
+        display: none;
+    }
+
+    #card-replacement__prio3 {
+        display: grid;
     }
 
     body {
@@ -68,9 +81,14 @@ figure {
 }
 
 @media (max-width: 820px) {
-    #card__prio2 {
+    #card__prio2, #card__prio3, #card-replacement__prio1 {
         display: none;
     }
+
+    #card-replacement__prio2, #card-replacement__prio3, #card__prio1 {
+        display: grid;
+    }
+
 }
 
 @media (max-width: 600px) {
